# ardite-rest

./: .gitignore  Cargo.toml  README.md
src/: case.rs  main.rs  router.rs  server.rs
src/resource/: collection.rs  mod.rs  root.rs  type_.rs
tests/: root.rs
tests/fixtures/: forum.yml
tests/support/: macros.rs
