[package]
name = "ardite-rest"
version = "0.1.0"
description = "Ardite service providing a RESTful interface over HTTP."
keywords = ["ardite", "rest"]
authors = ["Caleb Meredith <calebmeredith8@gmail.com>"]
license = "MIT"
repository = "ardite/ardite-rest"
readme = "README.md"

[dependencies]
ansi_term = "0.7.2"
ardite = { path = "../ardite-core" }
clap = "2.2.1"
iron = "0.3.0"
logger = "0.0.3"
